# qpg

./: .gitignore  GUIDE.md  PIPELINE.md  PROSE.md  README.md  benchmark.py  candidate_stats.pl  config_base.sh  dynaco.tex  eval_copy_pf.sh  eval_copy_tgcn.sh  main.py  method.tex  paper.md  partition_graph.pl  pyproject.toml  qpg_dynaco_workflow.py  references.bib  run.py  run_gfa_sim.sh  run_sim_add_gfa_weights_km.sh  run_sim_create_gfa.sh  run_sim_evaluate_path.sh  run_sim_solver_qubo.sh  run_sim_solver_qubo_with_pathfinder.sh  run_sim_solver_qubo_with_pathfinder_graph.sh  seea.md  tag_gfa_copy_numbers.pl  tangle_resolution_benchmark.sh  tangle_resolution_benchmark_parse_stats.sh  tangle_resolution_benchmark_violin.sh  test.py  train.py  train_walk_coverage_prior.py
configs/: dynaco_online_hard.yaml  dynaco_paper_pipeline_mg.yaml  dynaco_paper_pipeline_mg_walk_coverage.yaml  dynaco_paper_pipeline_online.yaml  dynaco_paper_pipeline_seed3_seq5.yaml
examples/: README.md  benchmark_search_solvers.py  config_synthetic_tiny.sh  run_tiny_oriented_qubo.py  smoke_qpg_gnn.py  tiny_line.gfa  train_qpg_dynaco_cpp.py  train_qpg_dynaco_online.py  train_qpg_neural_aco.py  train_qpg_prefix_supervised.py  train_qpg_reinforce.py
qubo/: plot_tangle_benchmark.ipynb  plot_tangle_benchmark.py
results/: README.md
scripts/: compare_dynaco_training_distribution.py  generate_paper_pipeline_gfa_corpus.py  generate_walk_evidence.py  reproduce_paper_results.py  run_dynaco_claim_experiments.py  run_next_paper_experiments.py  run_overnight_dynaco_paper_benchmark.py  sweep_aco_params.py  (+3 more)
(+32 files in other folders)
