[project]
name = "qpg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gfapy>=1.2.3",
    "pytorch-triton-rocm>=3.5.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.66.5",
    "wandb>=0.17.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/rocm6.3"
